Corrected to .jpg extn

--- a/docs/views/pizza.html
+++ b/docs/views/pizza.html
@@ -108,7 +108,7 @@
             <div style="width:35%">
               <figure>
                 <picture>
-                <source srcset="views/images_src/pizzeria-large2x.jpg 2x, views/images_src/pizzeria-large1x.webp 1x" media="(min-width:800px)"/>
+                <source srcset="views/images_src/pizzeria-large2x.jpg 2x, views/images_src/pizzeria-large1x.jpg 1x" media="(min-width:800px)"/>
                 <source srcset="views/images_src/pizzeria-medium.jpg" media="(min-width:650px)"/>
                 <img src="views/images_src/pizzeria-small.jpg" media="(max-width:599px)" alt="Cam's Pizzeria">
                 </picture>
