--- a/docs/views/pizza.html
+++ b/docs/views/pizza.html
@@ -38,7 +38,7 @@
     </div>
     <div id="callToAction" class="row">
       <div class="col-md-4">
-        <img src="images/pizzeria.jpg" class="img-responsive"> <!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
+              <img src="images/images_src/pizzeria_medium.jpg" class="img-responsive"><!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
       </div>
       <div class="col-md-8">
         <div class="row">
@@ -106,13 +106,7 @@
         <div id="randomPizzas" class="row">
           <div id="pizza0" class="randomPizzaContainer" style="width:33.33%; height: 325px;">
             <div style="width:35%">
-              <figure>
-                <picture>
-                <source srcset="views/images_src/pizzeria-large2x.jpg 2x, views/images_src/pizzeria-large1x.jpg 1x" media="(min-width:800px)"/>
-                <source srcset="views/images_src/pizzeria-medium.jpg" media="(min-width:650px)"/>
-                <img src="views/images_src/pizzeria-small.jpg" media="(max-width:599px)" alt="Cam's Pizzeria">
-                </picture>
-              </figure>
+              <img src="images/pizza.png" class="img-responsive">
             </div>
             <div style="width:65%">
               <h4>The Udacity Special</h4>
